docker/kubernetes/prod/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: figured
  namespace: default
  labels:
    app: figured
    track: production
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: figured
      track: production
      tier: web
  template:
    metadata:
      labels:
        app: figured
        track: production
        tier: web
    spec:
      volumes:
        - name: nginx-conf
          configMap:
            name: "figured-nginx"
        - name: dotenv
          configMap:
            name: "figured-dotenv"
      containers:
        - name: "php"
          image: "figured/kube-demo-php:latest"
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 9000
          volumeMounts:
            - name: dotenv
              mountPath: /var/www/html/.env
              subPath: .env
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 128M
        - name: "nginx"
          image: "figured/kube-demo-nginx:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
#          readinessProbe:
#            httpGet:
#              path: /
#              port: http
#              scheme: HTTP
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64M
