docker/kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: figured
  namespace: default
  labels:
    app: figured
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: figured
    track: production
    tier: web
